Added git status to prompt

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,26 +1,48 @@
 [include]
 	path = .gitconfig.private
 [color]
-	ui = auto
 	diff = auto
+	status = auto
+	branch = auto
+	interactive = auto
+	ui = auto
+[help]
+	format = web
 [core]
 	ignorecase = false
-	autocrlf = false
+	autocrlf = input
 	filemode = false
 	excludesfile = ~/.gitignore_global
+	editor = mvim -f
+	whitespace = tab-in-indent,blank-at-eof
 [log]
 	date = iso
 [alias]
-	gunstage = reset HEAD --
-	gs = status -sb
-	gci = commit
-	gco = checkout
-	gpu = push origin master
-	gup = pull --rebase
-	gl  = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen%cr%Creset' -n 15
-	gll = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen%cr%Creset'
-	glg = log --pretty='tformat:%Cred%h%Creset %C(yellow)%an%Creset (%Cgreen%ar%Creset) %s'
-	grank = shortlog -s -n --no-merges
-	gw = whatchanged --oneline
-	gc = commit -m
-	gca = commit -am
+	unstage = reset HEAD --
+	s = status -sb
+	ci = commit
+	co = checkout
+	pu = push origin master
+	up = pull --rebase
+	reb = rebase
+	l  = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen%cr%Creset' -n 15
+	ll = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen%cr%Creset'
+	lg = log --pretty='tformat:%Cred%h%Creset %C(yellow)%an%Creset (%Cgreen%ar%Creset) %s'
+	local = log --branches --not --remotes --simplify-by-decoration --decorate --oneline
+	rank = shortlog -s -n --no-merges
+	undo = reset --soft HEAD^
+	praise = blame
+	w = whatchanged --oneline
+	fix = commit --amend -C HEAD
+	ds = diff -b --stat
+	d = diff -b
+	dw = diff -b --word-diff=color
+	c = commit -m
+	ca = commit -am
+[merge]
+	tool = opendiff
+[branch]
+	autosetuprebase = always
+[branch "master"]
+	remote = origin
+	merge = refs/heads/master
