added more programs and some npm stuff

--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,6 @@ loglevel = warn
 init.author.email = hinderberg@gmail.com
 init.author.name = Hans Magnus Inderberg
 init.author.url = http://hinderberg.no
+save = true
+save-exact = true
+progress = false
