--- a/.gitconfig
+++ b/.gitconfig
@@ -26,7 +26,7 @@
 	autocrlf = input
 	filemode = false
 	excludesfile = ~/.gitignore_global
-	editor = mvim -f
+	editor = code
 	whitespace = tab-in-indent,blank-at-eof
 [log]
 	date = iso
