--- a/.npmrc
+++ b/.npmrc
@@ -1,9 +1,9 @@
 username = hinderberg
 email = hinderberg@gmail.com
 loglevel = warn
-init.author.email = hinderberg@gmail.com
-init.author.name = Hans Magnus Inderberg
-init.author.url = http://hinderberg.no
+--init.author.email = hinderberg@gmail.com
+--init.author.name = Hans Magnus Inderberg
+--init.author.url = http://hinderberg.no
 save = true
 save-exact = true
 progress = false
